# beacon

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  VISION.md
.agents/skills/merge-pr/: SKILL.md
.agents/skills/prepare-pr/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.agents/skills/verify/: SKILL.md
.claude/commands/: merge-pr.md  prepare-pr.md  review-pr.md  verify.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-sdk.yml
backend/: .env.example  mock_server.py  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: analysis.py  demo.py  otlp.py  playground.py  prompt_versions.py  replay.py  search.py  settings.py  spans.py  stats.py  traces.py
backend/app/services/: analysis_service.py  demo_service.py  export_service.py  import_service.py  llm_client.py  otlp_service.py  playground_service.py  prompt_version_service.py  replay_service.py  search_service.py  settings_service.py  span_service.py  trace_service.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_analysis.py  test_demo.py  test_export_import.py  test_llm_client.py  test_otlp.py  test_playground.py  test_prompt_versions.py  test_replay.py  test_search.py  test_settings.py  test_spans.py  test_stats.py  test_tags_annotations.py  test_traces.py
docs/: api-contracts.md  architecture.md  backend.md  contributing.md  conventions.md  data-model.md  design-system.md  frontend.md  roadmap.md  sdk.md
docs/example-traces/: rag-agent.json  tool-calling-agent-with-errors.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts  (+5 more)
git-hooks/: pre-commit
sdk/: README.md  pyproject.toml
sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
sdk-js/examples/: basic-agent.ts  vercel-ai-agent.ts
sdk-js/src/: context.ts  decorators.ts  exporter.ts  index.ts  models.ts  pricing.ts  tracer.ts
sdk-js/tests/: context.test.ts  decorators.test.ts  exporter.test.ts  helpers.ts  models.test.ts  pricing.test.ts  tracer.test.ts
sdk/beacon_sdk/: __init__.py  context.py  decorators.py  exporters.py  models.py  pricing.py  tracer.py
sdk/beacon_sdk/integrations/: anthropic.py  autogen.py  crewai.py  file_patch.py  google_genai.py  langchain.py  livekit.py  llamaindex.py  ollama.py  openai.py  playwright.py  subprocess_patch.py
sdk/examples/: autogen_agent.py  browser_agent.py  crewai_agent.py  google_agent.py  hello_world.py  langchain_agent.py  llamaindex_agent.py  ollama_agent.py
sdk/examples/demo/: _fixtures.py  code_writer_agent.py  rag_pipeline.py  research_agent.py  run_all.py  web_scraper_agent.py
sdk/tests/: conftest.py  test_context.py  test_decorators.py  test_exporters.py  test_integrations_anthropic.py  test_integrations_autogen.py  test_integrations_crewai.py  test_integrations_file.py  test_integrations_google.py  test_integrations_langchain.py  test_integrations_livekit.py  test_integrations_llamaindex.py  test_integrations_ollama.py  test_integrations_openai.py  test_integrations_playwright.py  test_integrations_subprocess.py  test_models.py  test_pricing.py  test_tracer.py
(+73 files in other folders)
