[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon-sdk"
version = "0.1.0"
description = "Instrumentation SDK for Beacon — Chrome DevTools for AI Agents"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
playwright = ["playwright>=1.40.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "responses>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
