[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon-sdk"
version = "0.1.0"
description = "Instrumentation SDK for Beacon — Chrome DevTools for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vexor Labs", email = "hello@vexorlabs.com" },
]
keywords = ["ai", "agents", "tracing", "observability", "debugging", "llm", "opentelemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/vexorlabs/beacon"
Repository = "https://github.com/vexorlabs/beacon"
Documentation = "https://github.com/vexorlabs/beacon#readme"
Issues = "https://github.com/vexorlabs/beacon/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
google = ["google-genai>=1.0.0"]
playwright = ["playwright>=1.40.0"]
livekit = ["livekit-agents>=1.0.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-genai>=1.0.0",
    "playwright>=1.40.0",
    "livekit-agents>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "responses>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
